# instagram-followback-checker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  instagram_followback_checker.py  instagram_followback_desktop_bridge.py  instagram_followback_live.py  instagram_followback_web.py  instagram_nonfollowers.py  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: ci.yml  desktop-build.yml
desktop-shell/: index.html
scripts/: capture_desktop_screenshots.py  install_demo_desktop_state.py  install_desktop_app.sh  prepare_desktop_runtime.py  run_prepare_desktop_runtime.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: test_instagram_followback_desktop_bridge.py  test_instagram_followback_live.py  test_instagram_nonfollowers.py  test_prepare_desktop_runtime.py
