[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instagram-followback-checker"
version = "0.1.0"
description = "CLI tool for analyzing followback relationships from official Instagram JSON exports"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "theycallmedern", email = "mishabeliako@icloud.com"}
]
keywords = ["instagram", "cli", "export", "followers", "followback"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities"
]

[project.scripts]
ig-followback = "instagram_followback_checker:main"

[tool.setuptools]
py-modules = ["instagram_followback_checker", "instagram_nonfollowers"]
