[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instagram-followback-checker"
version = "0.3.1"
description = "Local-first desktop app, web UI, and CLI for checking Instagram followback relationships"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Misha Belyakov"}
]
keywords = ["instagram", "desktop", "tauri", "cli", "followers", "followback"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities"
]

[project.optional-dependencies]
live = ["playwright>=1.55,<2"]

[project.scripts]
ig-followback = "instagram_followback_checker:main"
ig-followback-ui = "instagram_followback_web:main"
ig-followback-live = "instagram_followback_live:main"

[tool.setuptools]
py-modules = [
  "instagram_followback_checker",
  "instagram_followback_live",
  "instagram_followback_web",
  "instagram_nonfollowers",
]
