[package]
name = "instagram-followback-desktop"
version = "0.3.1"
description = "Desktop shell for Instagram Followback"
authors = ["Misha Belyakov"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = [] }
